cleaner navbar css - old way created z-index bug that blocked buttons at specific scrollheight

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1030,8 +1030,9 @@
 				position: fixed;
 				display: block;
 				top: 5px;
-				left: 0;
-				width: 100%;
+				left: 50%;
+				width: auto;
+				transform: translateX(-50%);
 				text-align: center;
 				z-index: 1;
 				
